src/assets/stylesheets/medium-editor.scss
.clearfix:after {
  display: block;
  visibility: hidden;
  clear: both;
  height: 0;
  content: " ";
  font-size: 0; }


@keyframes pop-upwards {
  0% { opacity: 0; }

  20% { opacity: .7; }

  40% { opacity: 1; }

  70% { opacity: 1; }

  100% { opacity: 1; }
}

.data-medium-element sup {
  vertical-align: super;
}

.data-medium-element sub {
  vertical-align: sub;
}

.data-medium-element img {
  max-width: 100%;
}

.medium-editor-hidden {
  display: none;
}


.medium-editor-toolbar,
.medium-editor-anchor-preview {
  visibility: hidden;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2000;
  font-size: 1em;
  background-color: inherit;
  border: 0.1em solid currentColor;
}
.medium-editor-toolbar ul,
.medium-editor-anchor-preview ul {
  margin: 0;
  padding: 0;
}

.medium-editor-toolbar li,
.medium-editor-anchor-preview li {
  display: inline-block;
}
.medium-editor-toolbar li button,
.medium-editor-anchor-preview li button {
  display: block;
  margin: 0;
  padding: 1em 1.5em;
  cursor: pointer;
  color: inherit;
  font-size: inherit;
  text-decoration: none;
  background-color: transparent;
  border: none;

  &:hover {
    transform: translateY(0.5em);
    text-decoration: underline;
  }
}
.medium-editor-toolbar li button:focus,
.medium-editor-anchor-preview li button:focus {
  outline: none;
}

.medium-editor-toolbar li .medium-editor-action-underline,
.medium-editor-anchor-preview li .medium-editor-action-underline {
  text-decoration: underline;
}

.medium-editor-anchor-preview {
  word-break: break-all;
  word-wrap: break-word;
  text-align: center;
}

.medium-editor-toolbar-anchor-preview-inner {
  display: block;
  font-family: inherit;
  padding: 1em 1.5em;
  border: 0.1em solid currentColor;
}

.medium-editor-toolbar-active,
.medium-editor-anchor-preview-active {
  visibility: visible;
}

.sticky-toolbar {
  position: fixed;
  top: 1px;
}

.medium-editor-toolbar-active.stalker-toolbar {
  animation: pop-upwards 160ms forwards linear;
}

.medium-editor-action-bold {
  font-weight: bolder;
}

.medium-editor-action-italic {
  font-style: italic;
}

.medium-editor-toolbar-form {
  display: none;
}

.medium-image-loading {
  width: 40px;
  height: 40px;
  display: inline-block;
  border-radius: 100%;
  animation: medium-image-loading-animation 1s infinite ease-in-out;
}

@keyframes medium-image-loading-animation {
  0% {
    transform: scale(0);
  }

  100% {
    transform: scale(1);
    opacity: 0;
  }
}

